[package]
name = "noctis"
version = "0.1.0"
authors = [ "Joosung Park <admin@slowmotion.dev>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
env_logger = "0.7"
juniper = "0.14"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
