[package]
name = "noctis"
version = "0.1.0"
authors = [ "Joosung Park <admin@slowmotion.dev>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.4", features = [ "r2d2", "mysql", "chrono" ] }
diesel-derive-enum = { version = "1", features = [ "mysql" ] }
dotenv = "0.15"
env_logger = "0.7"
juniper = "0.14"
rand = "0.7.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4.8"
thiserror = "1.0.15"
